--- a/src/components/app/header/home-main.html
+++ b/src/components/app/header/home-main.html
@@ -1,4 +1,5 @@
 <div>
   <md-button ui-sref-active="active" ui-sref="superheroes">Superheroes</md-button>
   <md-button ui-sref-active="active" ui-sref="villains">Villains</md-button>
+  <ui-view name="album"></ui-view>
 </div>
