tweaking gallery's flow

--- a/src/components/app/app.html
+++ b/src/components/app/app.html
@@ -4,7 +4,7 @@
 </header>
 
 <main layout="row">
-  <ui-view  ng-class="$ctrl.styles.main" name="main">
-    <!--<images></images>-->
-  </ui-view>
+  <ui-view  ng-class="$ctrl.styles.main" name="main"></ui-view>
 </main>
+
+<ui-view name="album"></ui-view>
